header , main , footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id = "structure">
+        <div id = "heroSection">
+            <header>:fire: Fireplace Palace</header>
+            <img id = "heroPhoto">
+        </div>
+        <main id= "howItWorks">
+        </main>
+        <footer>
+        </footer>
+    </div>
 </body>
 </html>
